@@ -34,14 +34,14 @@
 #include "h2_util.h"
 
 
-h2_task_output *h2_task_output_create(h2_task *task, apr_pool_t *pool)
+h2_task_output *h2_task_output_create(h2_task *task, conn_rec *c)
 {
-    h2_task_output *output = apr_pcalloc(pool, sizeof(h2_task_output));
-    
+    h2_task_output *output = apr_pcalloc(c->pool, sizeof(h2_task_output));
     if (output) {
+        output->c = c;
         output->task = task;
         output->state = H2_TASK_OUT_INIT;
-        output->from_h1 = h2_from_h1_create(task->stream_id, pool);
+        output->from_h1 = h2_from_h1_create(task->stream_id, c->pool);
         if (!output->from_h1) {
             return NULL;
         }
@@ -57,6 +57,23 @@ void h2_task_output_destroy(h2_task_output *output)
     }
 }
 
+static apr_table_t *get_trailers(h2_task_output *output)
+{
+    if (!output->trailers_passed) {
+        h2_response *response = h2_from_h1_get_response(output->from_h1);
+        if (response && response->trailers) {
+            output->trailers_passed = 1;
+            if (h2_task_logio_add_bytes_out) {
+                /* counter trailers as if we'd do a HTTP/1.1 serialization */
+                h2_task_logio_add_bytes_out(output->c, 
+                                            h2_util_table_bytes(response->trailers, 3)+1);
+            }
+            return response->trailers;
+        }
+    }
+    return NULL;
+}
+
 static apr_status_t open_if_needed(h2_task_output *output, ap_filter_t *f,
                                    apr_bucket_brigade *bb)
 {
@@ -67,8 +84,7 @@ static apr_status_t open_if_needed(h2_task_output *output, ap_filter_t *f,
         if (!response) {
             if (f) {
                 /* This happens currently when ap_die(status, r) is invoked
-                 * by a read request filter.
-                 */
+                 * by a read request filter. */
                 ap_log_cerror(APLOG_MARK, APLOG_DEBUG, 0, f->c,
                               "h2_task_output(%s): write without response "
                               "for %s %s %s",
@@ -83,23 +99,19 @@ static apr_status_t open_if_needed(h2_task_output *output, ap_filter_t *f,
             return APR_ECONNABORTED;
         }
         
-        output->trailers_passed = !!response->trailers;
+        if (h2_task_logio_add_bytes_out) {
+            /* counter headers as if we'd do a HTTP/1.1 serialization */
+            /* TODO: counter a virtual status line? */
+            apr_off_t bytes_written;
+            apr_brigade_length(bb, 0, &bytes_written);
+            bytes_written += h2_util_table_bytes(response->headers, 3)+1;
+            h2_task_logio_add_bytes_out(f->c, bytes_written);
+        }
+        get_trailers(output);
         return h2_mplx_out_open(output->task->mplx, output->task->stream_id, 
                                 response, f, bb, output->task->io);
     }
     return APR_EOF;
-}
-
-static apr_table_t *get_trailers(h2_task_output *output)
-{
-    if (!output->trailers_passed) {
-        h2_response *response = h2_from_h1_get_response(output->from_h1);
-        if (response && response->trailers) {
-            output->trailers_passed = 1;
-            return response->trailers;
-        }
-    }
-    return NULL;
 }
 
 void h2_task_output_close(h2_task_output *output)
@@ -142,6 +154,11 @@ apr_status_t h2_task_output_write(h2_task_output *output,
     
     ap_log_cerror(APLOG_MARK, APLOG_TRACE1, 0, f->c,
                   "h2_task_output(%s): write brigade", output->task->id);
+    if (h2_task_logio_add_bytes_out) {
+        apr_off_t bytes_written;
+        apr_brigade_length(bb, 0, &bytes_written);
+        h2_task_logio_add_bytes_out(f->c, bytes_written);
+    }
     return h2_mplx_out_write(output->task->mplx, output->task->stream_id, 
                              f, bb, get_trailers(output), output->task->io);
 }
